  entire variant conversion engine, and the default is set to true. Former 
  variable $wgDisableLangConversion was superseded by this variable.
* Subpages are now enabled in the MediaWiki namespace by default.  This is
  mainly a cosmetic change, and does not in any way affect the MessageCache,
  which was already effectively treating the namespace as if it had subpages.

=== New features in 1.16 ===

* Add CSS defintion of the 'wikitable' class to shared.css
* (bug 17163) Added MediaWiki:Talkpageheader which will be displayed when
  viewing talk pages
* Add group convertsion support for LanguageConverter. New magic word
  "{{GROUPCONVERT:xxx}}" enabled for this new feature. You can set related
  conversion rules in [[MediaWiki:Groupconversiontable-xxx/language_code]].
* Superfluous border="0" removed from images
* Added new hook 'MessageCacheReplace' into MessageCache.php. For instance
  to allow extensions to update caches in similar way as MediaWiki invalidates
  a cached MonoBook sidebar
* Special:AllPages: Move hardcoded styles from code to CSS
* (bug 6092) Add parser function equivalents of {{REVISIONID}},
  {{REVISIONTIMESTAMP}}  (and friends) and {{REVISIONUSER}} magic words
* (bug 18529) New hook: SoftwareInfo for adding information about the software
  to Special:Version
* Added $wgExtPGAlteredFields to allow extensions to easily alter the data
  type of columns when using the Postgres backend.
* (bug 16950) Show move log when viewing/creating a deleted page
* (bug 18242) Show the Subversion revision number per extensions in
  Special:Version
* (bug 18420) Missing file revisions are handled gracefully now
* (bug 9219) Auth plugins can control editing RealName/Email/Nick preferences
* New hook: MessageNotInMwNs to handle localised messages that aren't in the
  Mediawiki Namespace, before checking the message files
* (bug 18466) Add note or warning when overruling a move (semi-)protection
* (bug 18342) insertTags works in edit summary box